<resources>
    <string name="app_name">Move</string>

    <!-- region   ONBOARDING STRINGS-->
    <string name="onboarding_button_start_text">Get started</string>
    <string name="onboarding_1_title">Safety</string>
    <string name="onboarding_1_body">Please wear a helmet and protect yourself while riding</string>
    <string name="onboarding_2_title">Scan</string>
    <string name="onboarding_2_body">Scan the QR code or NFC sticker on top of the scooter to unlock and ride.</string>
    <string name="onboarding_3_title">Ride</string>
    <string name="onboarding_3_body">Step on the scooter with one foot and kick off the ground. When the scooter starts to coast, push the right throttle to accelerate.</string>
    <string name="onboarding_4_title">Parking</string>
    <string name="onboarding_4_body">If convenient, park at a bike rack. If not, park close to the edge of the sidewalk closest to the street. Do not block sidewalks, doors or ramps.</string>
    <string name="onboarding_5_title">Rules</string>
    <string name="onboarding_5_body">You must be 18 years or and older with a valid driving licence to operate a scooter. Please follow all street signs, signals and markings, and obey local traffic laws.</string>
    <string name="skip_button_text">Skip</string>
    <string name="text_button_onboarding_page">Next</string>
    <!--    endregion-->

    <!--   region  LOGIN TO REGISTER STRINGS  -->
    <string name="go_to_register_fill_text">Don\'t have an account? You can</string>
    <string name="go_to_register_link"><a href="">start with one here</a></string>
    <string name="go_to_register_text">%1$s %2$s</string>
    <!--    endregion-->

    <!--  region  LOGIN TO FORGOT PASSWORD STRINGS -->
    <string name="forgot_password"><a href="">Forgot password?</a></string>
    <!--    endregion-->

    <!-- region   REGISTER TERMS AND CONDITIONS STRINGS -->
    <string name="terms_and_conditions_intro_text">By continuing you agree to Move’s\n</string>
    <string name="t_and_c_link"><a href="">Terms and Conditions</a></string>
    <string name="just_and">and</string>
    <string name="privacy_policy_link"><a href="">Privacy Policy</a></string>
    <string name="terms_and_conditions_text">%1$s %2$s %3$s %4$s</string>
    <!--    endregion-->

    <!--region  REGISTER TO LOGIN STRINGS-->
    <string name="launch_login_Text">You already have an account? You can </string>
    <string name="launch_login_link">log in here</string>
    <string name="launch_login">%1$s %2$s</string>
    <string name="register_subtitle">Sign up or login and start riding right away</string>
    <string name="register_title">Let\'s get started</string>
    <string name="login_btn_string">Login</string>
    <string name="register_btn_string">Register</string>
    <string name="send_reset_link_text">Send Reset Link</string>
    <string name="forgot_password_title_string">Forgot Password</string>
    <string name="forgot_password_subtitle_string">Enter the email address you’re using for your account bellow and we’ll send you a password reset link.</string>
    <string name="forgot_password_email_address_hint_string">Email address</string>
    <string name="login_title_string">Login</string>
    <string name="login_subtitle_string">Enter your account credentials and start riding right away</string>
    <string name="login_email_address_hint_string">Email address</string>
    <string name="login_password_hint_string">Password</string>
    <string name="register_email_address_hint_string">Email address</string>
    <string name="register_username_hint_string">Username</string>
    <string name="register_password_hint_string">Password</string>
    <!--    endregion-->

    <!--  region  AUTHENTICATION ERRORS STRINGS-->
    <string name="login_error_string">Incorrect credentials</string>
    <string name="invalid_email_string">Invalid email</string>
    <string name="invalid_password_string">At least 5 characters</string>
    <string name="register_error_message">Email already exists</string>
    <string name="error_text_tapadoo_toast">Error</string>
    <!--    endregion-->

    <!--  region  LICENSE STRINGS-->
    <string name="license_disclaimer_title_string">Before you can start riding</string>
    <string name="disclaimer_instructions_string">Please take a photo or upload the front side of your driving license so we can make sure that it is valid.</string>
    <string name="driving_license_title">Driving License</string>
    <string name="add_license_button_string">Add driving license</string>
    <string name="pre_license_check_text">We are currently verifying your driving license</string>
    <string name="post_license_verification_text">We’ve successfully validated your driving license</string>
    <string name="license_registration_error_text">Something went wrong!</string>
    <!--    endregion-->

    <!--  region SCOOTER MAP STRINGS-->
    <string name="find_scooters_btn_string">Find scooters</string>
    <string name="exit_app_button_text">Press again to exit</string>
    <string name="unlock_scooter_string">Unlock</string>
    <string name="scooter_text">Scooter</string>
    <string name="scooter_number_text">#%1$s</string>
    <string name="scooter_battery_level_text">%1$s%%</string>
    <string name="turn_location_message_string">Please turn on location</string>
    <string name="scooter_address_string"> %1$s, Nr. %2$s</string>
    <string name="bottom_sheet_card_instructions">You can unlock this scooter through these methods:</string>
    <string name="bottom_sheet_scooter_title_text">Scooter</string>
    <string name="small_icon_ring_text">Ring</string>
    <string name="unlock_by_nfc_btn_text">NFC</string>
    <string name="unlock_by_qr_btn_text">QR</string>
    <string name="unlock_by_code_btn_text">123</string>
    <string name="small_icon_missing_text">Missing</string>
    <string name="unlock_by_code_title_text">Enter the scoter’s serial number</string>
    <string name="unlock_by_code_subtitle_text">You can find it on the \nscooter’s front panel</string>
    <string name="unlock_suggestions_text">Alternately you can unlock using</string>
    <string name="qr_btn_text">QR</string>
    <string name="scan_alternate_options_text">or</string>
    <string name="nfc_btn_text">NFC</string>
    <string name="scooter_success_safety_request_text">Please respect all the driving regulations\nand other participants in traffic while using\nour scooters.</string>
    <string name="scooter_unlock_successful_text">Unlock\nSuccessful</string>
    <string name="address_exception_location_text">Galati, Romania</string>
    <string name="card_trip_details_title_text">Trip details</string>
    <string name="distance_subtitle_text">Distance</string>
    <string name="travel_time_subtitle_text">Travel time</string>
    <string name="lock_ride_btn_text">Lock</string>
    <string name="unlock_ride_btn_text">Unlock</string>
    <string name="end_ride_btn_text">End Ride</string>
    <string name="cronometer_format_string">%s min</string>
    <string name="live_ride_duration_format_string">%s:%s min</string>
    <string name="expired_reservation_text">Your reservation has expired!</string>
    <!--    endregion-->

    <!--    region MENU-->
    <string name="ride_history_title_text">History</string>
    <string name="ride_history_subtitle_text">Total rides: %d</string>
    <string name="menu_account_btn_text">Account</string>
    <string name="menu_change_password_text">Change Password</string>
    <string name="menu_general_settings_subtitle_text">General Settings</string>
    <string name="menu_legal_subtitle_text">Legal</string>
    <string name="menu_terms_and_conditions_btn_text">Terms and conditions</string>
    <string name="menu_privacy_policy_btn_text">Privacy Policy</string>
    <string name="menu_rate_us_subtitle_text">Rate Us</string>
    <string name="start_address_subtitle_text">From</string>
    <string name="end_address_subtitle_text">To</string>
    <string name="trave_time_subtitle_text">Travel Time</string>
    <string name="travel_distance_subtitle_text">Distance</string>
    <string name="travel_time_title_format_text">%d:%02d min</string>
    <string name="ride_distance_format_text">%.1f km </string>
    <string name="see_all_button_text">See all</string>>
    <string name="ride_cardview_distance_format_text">%d m</string>
    <string name="start_ride_text">Start ride</string>
    <string name="email_input_hint">Email</string>
    <string name="username_input_hint">Username</string>
    <string name="log_out_btn_text">Log out</string>
    <string name="save_changes_text">Save changes</string>
    <string name="change_password_title">Change password</string>
    <string name="account_title_text">Account</string>
    <string name="old_password_text">Old password</string>
    <string name="new_password_text">New password</string>
    <string name="confirm_new_password_text">Confirm new password</string>
    <string name="pay_with_text">Pay with</string>
    <string name="dialog_title">Payment successful</string>
    <string name="dialog_supporting_text">You can find your receipt on your email</string>
    <string name="dialog_positive_text">OK</string>
    <!--    endregion-->
</resources>