<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/driving_instructions_accent_color"
        app:title="@string/change_password_title"
        app:titleCentered="true"
        app:titleTextColor="@color/driving_instructions_accent_color" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPasswordTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/account_data_margin_horizontal"
        android:layout_marginTop="@dimen/account_data_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordET"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/old_password_text"
            android:textColor="@color/primary_dark_purple" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/account_data_margin_horizontal"
        android:layout_marginTop="@dimen/account_data_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldPasswordTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordET"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_password_text"
            android:textColor="@color/primary_dark_purple" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmNewPasswordTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/account_data_margin_horizontal"
        android:layout_marginTop="@dimen/account_data_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmNewPasswordET"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_new_password_text"
            android:textColor="@color/primary_dark_purple" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveChangesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/save_changes_margin_horizontal"
        android:layout_marginBottom="@dimen/reset_password_btn_margin_bottom"
        android:text="@string/save_changes_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>