<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app">

    <ImageButton
        android:id="@+id/goBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin_horizontal"
        android:layout_marginTop="@dimen/ic_back_margin_top"
        android:background="#00000000"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/principal_icon_tint" />

    <TextView
        android:id="@+id/titleTV"
        style="@style/Heading1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textView_margin_start"
        android:layout_marginTop="@dimen/textView_reset_pwd_margin_top"
        android:text="@string/forgot_password_title_string"
        android:textColor="@color/primary_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goBackBtn" />

    <TextView
        android:id="@+id/captionTV"
        style="@style/Heading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textView_margin_start"
        android:layout_marginTop="@dimen/textView_secondary_margin_top"
        android:layout_marginEnd="@dimen/textView_secondary_margin_end"
        android:text="@string/forgot_password_subtitle_string"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTV" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputTIL"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textField_secondary_margin_top"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/captionTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputET"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textField_margin_start"
            android:layout_marginEnd="@dimen/textField_margin_End"
            android:hint="@string/forgot_password_email_address_hint_string" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resetPasswordBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/button_margin_horizontal"
        android:layout_marginTop="@dimen/button_margin_top"
        android:enabled="false"
        android:text="@string/send_reset_link_text"
        android:textColor="@color/neutral_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputTIL" />
</androidx.constraintlayout.widget.ConstraintLayout>