<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app">

    <ImageView
        android:id="@+id/licenseConfirmIV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/license_confirm_image_margin_top"
        android:src="@drawable/ic_validated_picture"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/validationStatusTV"
        style="@style/Heading1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textView_heading_margin_start"
        android:layout_marginTop="@dimen/textView_heading1_top_margin"
        android:layout_marginEnd="@dimen/textView_heading_margin_end"
        android:layout_marginBottom="@dimen/textView_heading1_bottom_margin"
        android:gravity="center_horizontal"
        android:text="@string/pre_license_check_text"
        android:textAlignment="center"
        android:textColor="@color/primary_text_color"
        app:layout_constraintBottom_toTopOf="@id/validationProcessSpn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/validationConfirmTV"
        style="@style/Heading1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textView_heading_margin_start"
        android:layout_marginTop="@dimen/textView_margin_top"
        android:layout_marginEnd="@dimen/textView_heading_margin_end"
        android:text="@string/post_license_verification_text"
        android:textAlignment="center"
        android:textColor="@color/primary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/licenseConfirmIV"
        tools:visibility="invisible" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/validationProcessSpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible"
        app:indicatorColor="@color/loading_indicator_color"
        app:indicatorSize="@dimen/loading_indicator_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/launchMapBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/button_margin_horizontal"
        android:layout_marginBottom="@dimen/button_margin_top"
        android:text="@string/find_scooters_btn_string"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>